2002-09-16  Terry Biggs <tbiggs@users.sourceforge.net>

	* added gnome/dialog.c and gui/dialog.h this is to
	  replace gnomedialog
	  

2002-09-11  Terry Biggs <tbiggs@users.sourceforge.net>

	* added patch from Tim Silversides <silversides@btinternet.com>
	  that toggles show/hide texts, comms and dicts.


2002-08-27  Terry Biggs <tbiggs@users.sourceforge.net>

	* renamed gnomesword.desktop to gnomesword1.desktop
	* changed executable name to gnomesword1
	* gnomesword1 can be installed without affecting gnomesword
	

2002-08-23  Terry Biggs <tbiggs@users.sourceforge.net>

	* changed settings to use .gnomesword-1.0 directory
	  so you can run gnomesword1 and gnomesword and keep settings
	  seperate.	
	

2002-08-17  Terry Biggs <tbiggs@users.sourceforge.net>

	* added gnome/gbs_dialog.c and gui/gbs_dialog.h


2002-08-10  Terry Biggs <tbiggs@users.sourceforge.net>

	* fixed one module and settings set to first module crash
	* fixed crash when interlinear module was not available	
	

2002-08-09  Terry Biggs <tbiggs@users.sourceforge.net>

	* changed preferences file to preferences-1.0.conf
	* if preferences-1.0.conf does not exist checks for
	  preferences.conf and loads it. It will then be saved
	  as preferences-1.0.conf.


2002-08-08  Terry Biggs <tbiggs@users.sourceforge.net>

	* added main/search.*
	* added backend/search.*
	* added gui/search_dialog.h
	* added gnome/search_dialog.c
	* removed backend/search_.*


2002-07-30  Terry Biggs <tbiggs@users.sourceforge.net>

	* added main/spell_ispell.c for ispell support
	* ispell support requires ./configure --enable-with_ispell
	

2002-07-29  Terry Biggs <tbiggs@users.sourceforge.net>

	* added main/spell_pspell.c and main/spell.h
	* moved widgets from settings structure to
	  a widgets structure in gui/gnomesword.h
	* combined backend_first_init() and backend_init_sword()
	  into backend_init()	
	

2002-07-27  Terry Biggs <tbiggs@users.sourceforge.net>

	* removed main/char_table.*, main/spell.* and main/spell_gui.*